v1.6 of website. squashed bugs and added mobile footer. now whatsapp redirects to alex's number

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -26,6 +26,9 @@ header{
 	max-height: 200px;
 }
 
+.content{
+	margin-top: 5%;
+}
 .page-width{
 	width: 90%;
 	max-width: 770px;
@@ -63,7 +66,7 @@ header{
 	-ms-flex-flow: column nowrap;
 	flex-flow: column nowrap;
 	-webkit-justify-content: space-around;
-	-ms-justify-content: space-evenly;
+	-ms-justify-content: space-around;
 	justify-content: space-around;
 	-webkit-align-items: center;
 	-ms-align-items: center;
@@ -79,17 +82,24 @@ header{
 	-moz-box-shadow: 0px 0px 41px 11px rgba(102,102,102,0.41);
 	box-shadow: 0px 0px 41px 11px rgba(102,102,102,0.41);
 	text-align: center;
-  	display: -webkit-flex;
-  	-webkit-justify-content: center;
-  	-webkit-align-items: center;
-  	display: -ms-flex;
-  	-ms-justify-content: center;
-  	-ms-align-items: center;
-  	display: flex;
-  	justify-content: center;
-  	align-items: center;
 
 }
+
+.flex-wrapper{
+	width: 100%;
+ 	height: 100%;
+	display: -webkit-flex;
+	-webkit-justify-content: center;
+	-webkit-align-items: center;
+	display: -ms-flex;
+	-ms-justify-content: center;
+	-ms-align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+
 
 .slide{
 	display: block;
@@ -106,11 +116,11 @@ header{
 
 
 #flex1{
-	margin-top: 34%;
+	margin-top: 40%;
 }
 
 #flex5{
-	margin-bottom: 34%;
+	margin-bottom: 40%;
 }
 
 .slogen-wrapper{
@@ -161,12 +171,13 @@ header{
 	position: absolute;
 	z-index: 5;
 	display: block;
-	bottom: 2vw;
+	bottom: 2vw; left:0; right: 0;
 	width: 4vw;
 	height: 4vw;
 	max-height: 54px;
 	max-width: 54px;
 	cursor: pointer;
+	margin: 0 auto;
 	background-image: url("../img/play.png");
 	background-repeat: no-repeat;
 	background-size: 100%;
@@ -222,8 +233,8 @@ header{
 }
 
 .gallery-img{
-	width: 25vw;
-	height: 25vw;
+	width: 22vw;
+	height: 22vw;
 	max-width: 192px;
 	max-height: 192px;
 }
@@ -277,4 +288,55 @@ header{
   right: auto !important;
   bottom: 10%;
   left:7%;
+}
+
+.footer-wrapper{
+	text-align: center;
+}
+
+.footer-center{
+	display: inline-block;
+	margin: 0 auto;
+}
+
+.social-media {
+	width: 36px;
+	height: 36px;
+	padding: 6px;
+	font-size: 24px;
+	text-align: center;
+	text-decoration: none;
+	margin: 0 2px 10px 2px;
+}
+
+.social-media:hover{
+	-webkit-box-shadow: 0px 0px 12px -4px rgba(102,102,102,1);
+	-moz-box-shadow: 0px 0px 12px -4px rgba(102,102,102,1);
+	box-shadow: 0px 0px 12px -4px rgba(102,102,102,1);
+	text-decoration: none;
+}
+
+.fa-facebook{
+	color: #136cdb;
+}
+
+.fa-facebook:hover{
+	color: #136cdb;
+}
+
+
+.fa-youtube{
+	color: #f44336;
+}
+
+.fa-youtube:hover{
+	color: #f44336;
+}
+
+.fa-instagram{
+	color: #9c27b0;
+}
+
+.fa-instagram:hover{
+	color: #9c27b0;
 }
